fix(carreers/submission): input error overflowing on mobile version

--- a/src/pages/careers/styles.scss
+++ b/src/pages/careers/styles.scss
@@ -502,6 +502,16 @@
     .career-submission {
         p.main-text {
             font-size: 2.4em;
+
+            > div {
+
+                small.error-info {
+                    font-size: 10px;
+                    left: -50px;
+                    max-width: min-content;
+                }
+
+            }
         } 
     }
 
